--- a/index.html
+++ b/index.html
@@ -12,49 +12,44 @@
 			href="./images/favicon-32x32.png"
 		/>
 
-    <link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" />
 		<title>Frontend Mentor | Expenses chart component</title>
-
-
 	</head>
 	<body>
 		<main>
-      <div class="main-balance">
-        <div class="main-balance-detail">
-          <p>My Balance</p>
-          <h1>$921.48</h1>
-        </div>
-        <div class="main-balance-logo"></div>
-      </div>
-      <div class="main-spending">
-		<h1 class="main-spending-title">Spending - Last 7 days</h1>
-		<div class="main-spending-stats" id="statsContainer"></div>
-		<hr>
-		<div class="main-spending-detail">
-			<div class="main-spending-datail-1">
-				<p>Total this month</p>
-				<h1>price</h1>
+			<div class="main-balance">
+				<div class="main-balance-detail">
+					<p>My Balance</p>
+					<h1>$921.48</h1>
+				</div>
+				<div class="main-balance-logo"></div>
 			</div>
-			<div class="main-spending-datail-2">
-				<p>+2,4%</p>
-				<p>From last month</p>
-
+			<div class="main-spending">
+				<h1 class="main-spending-title">Spending - Last 7 days</h1>
+				<div class="main-spending-stats" id="statsContainer"></div>
+				<hr />
+				<div class="main-spending-detail">
+					<div class="main-spending-datail-1">
+						<p>Total this month</p>
+						<h1>$478.33</h1>
+					</div>
+					<div class="main-spending-datail-2">
+						<p>+2,4%</p>
+						<p>From last month</p>
+					</div>
+				</div>
 			</div>
-		</div>
-	  </div>
-    </main>
-    
-
+		</main>
 
 		<!-- My balance $921.48 Spending - Last 7 days mon tue wed thu fri sat sun Total
 		this month $478.33 +2.4% from last month -->
-<!-- 
+		<!-- 
 		<div class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 				>Frontend Mentor</a
 			>. Coded by <a href="#">Karabo Rabothata</a>.
 		</div> -->
-		<script type="module" src="app.js"></script>
+		<script type="module" src="./app.js"></script>
 	</body>
 </html>
