--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 				<h1 class="main-spending-title">Spending - Last 7 days</h1>
 				<div class="main-spending-stats" id="statsContainer"></div>
 				<hr />
-				<div class="main-spending-detail">
-					<div class="main-spending-datail-1">
+				<div class="main-review">
+					<div class="main-review-current">
 						<p>Total this month</p>
 						<h1>$478.33</h1>
 					</div>
-					<div class="main-spending-datail-2">
-						<p>+2,4%</p>
+					<div class="main-review-past">
+						<span>+2,4%</span>
 						<p>From last month</p>
 					</div>
 				</div>
