update on responsiveness

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
 		<main>
 			<div class="main-balance">
-				<div class="main-balance-detail">
+				<div class="main-balance-review">
 					<p>My Balance</p>
 					<h1>$921.48</h1>
 				</div>
@@ -40,10 +40,7 @@
 				</div>
 			</div>
 		</main>
-
-		<!-- My balance $921.48 Spending - Last 7 days mon tue wed thu fri sat sun Total
-		this month $478.33 +2.4% from last month -->
-		<!-- 
+<!-- 
 		<div class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
