added placeholder when data isn't processed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 			</div>
 			<div class="main-spending">
 				<h1 class="main-spending-title">Spending - Last 7 days</h1>
-				<div class="main-spending-stats grid" id="statsContainer"></div>
+				<div class="main-spending-stats grid" id="statsContainer">
+					<h1>Loading data</h1>
+				</div>
 				<hr />
 				<div class="main-review flex">
 					<div class="main-review-current">
